@startuml
title Diseño de datos — Sprint 3 (punto_medicion + medicion_wifi)
skinparam classBackgroundColor #EBF5FB
skinparam classBorderColor #2980B9
skinparam arrowColor #5D6D7E

class plano {
  +id: Integer <<PK>>
  +proyecto_id: Integer <<FK>>
  +escala_m_por_px: Float
  +calibrado: Boolean
}

class punto_medicion {
  +id: Integer <<PK>>
  +plano_id: Integer <<FK>>
  +x_px: Float
  +y_px: Float
  +x_m: Float
  +y_m: Float
  +nivel: NivelSenal
  +timestamp: DateTime
}

class medicion_wifi {
  +id: Integer <<PK>>
  +punto_id: Integer <<FK>>
  +ssid: String
  +bssid: String
  +rssi_dbm: Integer
  +canal: Integer
  +frecuencia_mhz: Integer
  +numero_lectura: Integer
  +timestamp: DateTime
}

enum NivelSenal {
  EXCELENTE  ≥ -65 dBm
  BUENO      -65 a -70 dBm
  ACEPTABLE  -70 a -85 dBm
  DEBIL      -85 a -90 dBm
  MUERTO     < -90 dBm
}

plano "1" -- "0..*" punto_medicion : contiene >
punto_medicion "1" -- "0..*" medicion_wifi : registra >
punto_medicion --> NivelSenal : clasifica por RSSI promedio
@enduml
